--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,96 @@
-{
-    "@metadata": {"authors": ["Arumi"]},
-   "action-manageachievements" : "Manage Achievements",
-   "manageachievements" : "Manage Achievements"
+{	
+	"@metadata": {"authors": ["Arumi"]},
+	"achievements-desc" : "Provide Achievements Functionalities for MediaWiki",
+	"action-manageachievements" : "Manage Achievements",
+	"manageachievements" : "Manage Achievements",
+	"redeemachievement" : "Redeem Achievement",
+
+	"prefs-achievements" : "Titles and Achievements",
+	"prefs-achievtitle" : "Titles",
+	"pref-achievtitle" : "Select Your Title",
+	"achievtitle-none" : "Do not show",
+	"pref-achievtitle-help" : "Your title will be shown after your user name (links to your user pages only).",
+	"prefs-achievlist" : "List of Achievements",
+	"achiev-mystery" : "???",
+	"achiev-progtext" : "$1 / $2 ( $3% )",
+	"user-achiev-info-title" : "Titles and Achievements",
+	"user-current-achiev-title" : "Current Title",
+	"user-count-achiev-title" : "Number of Achievements",
+	
+	"manageachievements-mode-list" : "List All Achievements",
+	"manageachievements-mode-prog" : "List User Progresses",
+	"manageachievements-mode-achiever" : "List Achievement Holders",
+	"manageachievements-mode-title" : "List User Titles",
+	"manageachievements-mode-recent" : "View Recent Activities",
+	"manageachievements-mode-user" : "List User Achievements",
+	"manageachievements-mode-msg" : "List Achievements' Msg",
+	"manageachievements-mode-ranking" : "List User Ranking",
+	"manageachievements-mode-token" : "Create Redeem Token",
+	"manageachievements-mode-tokens" : "List Redeem Tokens",
+	"manageachievements-mode-random" : "View Random Achievements",
+	"manage-achiev-name" : "Achievement ID: ",
+	"manage-achiev-user" : "User Name: ",
+	"manage-achiev-user-count" : " ($1 User(s))",
+	"manage-achiev-token-fail" : "Failed to create Redeem Token, please check your user status and settings of the achievement.",
+	"manage-achiev-token-notawardable" : "Failed to create Redeem Token, achievement setting \"awardable\" needs to be \"true\".",
+	"manage-achiev-token-invalid" : "Invalid achievement.",
+	"manage-achiev-token-user" : "Target User (optional): ",
+	"manage-achiev-token-count" : "Counter Increments (optional): ",
+	"manage-achiev-token-time" : "Effective Time (in seconds, optional): ",
+	"manage-achiev-tokens-hash" : "Hash",
+	"manage-achiev-tokens-achievid" : "Achievement ID",
+	"manage-achiev-tokens-user" : "Issued by",
+	"manage-achiev-tokens-target" : "Target",
+	"manage-achiev-tokens-count" : "Increment",
+	"manage-achiev-tokens-exptime" : "Expiration Time",
+	
+	"redeem-achiev-token-section" : "Please Enter A Redeem Token",
+	"achiev-loginrequired" : "You must be logged in to receive achievements.",
+	"redeem-achiev-token" : "Redeem Token: ",
+	"redeem-achiev-token-help" : "Redeem Token is a string of 20 characters in a format likes \"XXXXX-XXXXX-XXXXX-XXXXX\".",
+	"achiev-error-empty-token" : "Error: Token is empty.",
+	"achiev-error-invalid-token" : "Error: Token is invalid.",
+	"achiev-error-invalid-source" : "Error: Token was issued by an invalid user.",
+	"achiev-error-blocked-source" : "Error: Token was issued by a blocked user.",
+	"achiev-error-wrong-user" : "Error: You are not the targeted user.",
+	"achiev-error-achiev-notexists" : "Error: Achievement not exists.",
+	"achiev-error-award-failed" : "Error: Failed to award achievement.",
+	
+	"achiev-footnote-sep" : " | ",
+	"achiev-config-reset" : "Update Cycle",
+	"achiev-config-reset-desc" : "Achievements will be awarded and resetted at the end of specified period",
+	"achiev-config-reset-d" : "Updates Daily",
+	"achiev-config-reset-d-desc" : "Updates at 06:00 (UTC+8) everyday",
+	"achiev-config-reset-w" : "Updates Weekly",
+	"achiev-config-reset-w-desc" : "Updates at Monday 07:00 (UTC+8) everyweek",
+	"achiev-config-reset-m" : "Updates Monthly",
+	"achiev-config-reset-m-desc" : "Updates at the 1st day 08:00 (UTC+8) everymonth",
+	"achiev-config-removable" : "Removable",
+	"achiev-config-removable-desc" : "Will be removed if the user does not meet the requirements",
+	"achiev-config-awardable" : "Awardable",
+	"achiev-config-awardable-desc" : "Can be awarded by admins",
+	"achiev-config-hidden" : "Hidden Achievements",
+	"achiev-config-hidden-desc" : "Will not appear on the default List of Achievements",
+	"achiev-config-active" : "Active Achievements",
+	"achiev-config-active-desc" : "This achievement is currently Active and will update automatically",
+	"achiev-config-inactive" : "Inactive Achievements",
+	"achiev-config-inactive-desc" : "This achievement is currently Not Active",
+	"achiev-config-activerange" : "Limited Time Achievements",
+	"achiev-config-activerange-desc" : "This achievement is Active in the following time period Only: $1 - $2",
+	"achiev-achievers-count-wrap" : "Achievers: $1",
+	"achiev-achievers-count-desc" : "Number of users that had this achievement",
+	"achiev-achievers-count-sep" : " / ",
+	"achiev-achievers-count-mystery" : "??",
+	
+	"echo-category-title-achiev" : "Achievements",
+	"echo-pref-tooltip-achiev" : "Notify me when I received or losted an achievement.",
+	"notification-header-achiev-award" : "You have received an Achievement.",
+	"notification-body-achiev-award" : "Congrats! You have received the achievement 〈$1〉: $2",
+	"notification-header-achiev-remove" : "You have losted an Achievement.",
+	"notification-body-achiev-remove" : "Oops! You have losted the achievement 〈$1〉: $2",
+	"notification-body-achiev-invalid" : "Invalid Achievement",
+	"notification-body-achiev-link" : "Go to Preferences: Titles and Achievements",
+	"notification-body-achiev-addvalue" : "You have gained $2 progress for the achievement 〈$1〉",
+
+	"achievtitle-afterlink" : "〈$1〉"
 }
