--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -19,7 +19,7 @@
 	
 	"manageachievements-mode-list" : "查看所有成就",
 	"manageachievements-mode-prog" : "查看成就进度",
-	"manageachievements-mode-achiever" : "查看成就拥有着",
+	"manageachievements-mode-achiever" : "查看成就拥有者",
 	"manageachievements-mode-title" : "查看头衔",
 	"manageachievements-mode-recent" : "查看成就动态",
 	"manageachievements-mode-user" : "查看用户成就",
