--- a/i18n/en.json
+++ b/i18n/en.json
@@ -47,15 +47,20 @@
 	"redeem-achiev-token-section" : "Please Enter A Redeem Token",
 	"achiev-loginrequired" : "You must be logged in to receive achievements.",
 	"redeem-achiev-token" : "Redeem Token: ",
-	"redeem-achiev-token-help" : "Redeem Token is a string of 20 characters in a format likes \"XXXXX-XXXXX-XXXXX-XXXXX\".",
+	"redeem-achiev-token-help" : "Redeem Token is a string of 10 characters in a format likes \"XXXXX-XXXXX\".",
+	"achiev-error-invalid-stage" : "Error: Invalid Achievement stage.",
 	"achiev-error-empty-token" : "Error: Token is empty.",
 	"achiev-error-invalid-token" : "Error: Token is invalid.",
 	"achiev-error-invalid-source" : "Error: Token was issued by an invalid user.",
 	"achiev-error-blocked-source" : "Error: Token was issued by a blocked user.",
+	"achiev-error-blocked-user" : "Error: User has been blocked from this Achievement.",
 	"achiev-error-wrong-user" : "Error: You are not the targeted user.",
 	"achiev-error-achiev-notexists" : "Error: Achievement not exists.",
-	"achiev-error-award-failed" : "Error: Failed to award achievement.",
-	
+	"achiev-error-achiev-notawardable" : "Error: This Achievement is not awardable.",
+	"achiev-error-achiev-conflict" : "Error: Failed to award Achievement (conflicting Achievements).",
+	"achiev-error-achiev-already" : "Error: Failed to award Achievement (already has this Achievements).",
+	"achiev-error-award-failed" : "Error: Failed to award Achievement.",
+
 	"achiev-footnote-sep" : " | ",
 	"achiev-config-reset" : "Update Cycle",
 	"achiev-config-reset-desc" : "Achievements will be awarded and resetted at the end of specified period",
