--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -47,13 +47,18 @@
 	"redeem-achiev-token-section" : "请输入兑换码",
 	"achiev-loginrequired" : "您必须登录才能获取成就。",
 	"redeem-achiev-token" : "兑换码：",
-	"redeem-achiev-token-help" : "兑换码是“XXXXX-XXXXX-XXXXX-XXXXX”格式由20个字元组成的字串。",
+	"redeem-achiev-token-help" : "兑换码是“XXXXX-XXXXX”格式由10个字元组成的字串。",
+	"achiev-error-invalid-stage" : "错误：无效成就阶段",
 	"achiev-error-empty-token" : "错误：兑换码为空",
 	"achiev-error-invalid-token" : "错误：无效兑换码",
 	"achiev-error-invalid-source" : "错误：无效颁发者",
 	"achiev-error-blocked-source" : "错误：颁发者已被封禁",
+	"achiev-error-blocked-user" : "错误：用户已被禁止获取此成就",
 	"achiev-error-wrong-user" : "错误：用户不符",
 	"achiev-error-achiev-notexists" : "错误：成就不存在",
+	"achiev-error-achiev-notawardable" : "错误：此成就不可由用户颁发",
+	"achiev-error-achiev-conflict" : "错误：无法颁发成就（与已有成就冲突）",
+	"achiev-error-achiev-already" : "错误：无法颁发成就（已有该成就）",
 	"achiev-error-award-failed" : "错误：无法颁发成就",
 	
 	"achiev-footnote-sep" : " ｜ ",
