--- a/i18n/en.json
+++ b/i18n/en.json
@@ -16,6 +16,8 @@
 	"user-achiev-info-title" : "Titles and Achievements",
 	"user-current-achiev-title" : "Current Title",
 	"user-count-achiev-title" : "Number of Achievements",
+	"user-achiev-score" : "Achievements Score",
+	"user-achiev-level" : "Level",
 	
 	"manageachievements-mode-list" : "List All Achievements",
 	"manageachievements-mode-prog" : "List User Progresses",
@@ -25,12 +27,18 @@
 	"manageachievements-mode-user" : "List User Achievements",
 	"manageachievements-mode-msg" : "List Achievements' Msg",
 	"manageachievements-mode-ranking" : "List User Ranking",
+	"manageachievements-mode-scoring" : "View Achievements Scoring",
 	"manageachievements-mode-token" : "Create Redeem Token",
 	"manageachievements-mode-tokens" : "List Redeem Tokens",
 	"manageachievements-mode-random" : "View Random Achievements",
 	"manage-achiev-name" : "Achievement ID: ",
 	"manage-achiev-user" : "User Name: ",
 	"manage-achiev-user-count" : " ($1 User(s))",
+	"manage-achiev-ranking-user" : "User Name",
+	"manage-achiev-ranking-achiev" : "Number of Achievements",
+	"manage-achiev-ranking-score" : "Total Scores",
+	"manage-achiev-ranking-level" : "Level",
+	"manage-achiev-disable-scoring" : "Achievement Scoring is Disabled.",
 	"manage-achiev-token-fail" : "Failed to create Redeem Token, please check your user status and settings of the achievement.",
 	"manage-achiev-token-notawardable" : "Failed to create Redeem Token, achievement setting \"awardable\" needs to be \"true\".",
 	"manage-achiev-token-invalid" : "Invalid achievement.",
@@ -70,6 +78,8 @@
 	"achiev-config-reset-w-desc" : "Updates at Monday 07:00 (UTC+8) everyweek",
 	"achiev-config-reset-m" : "Updates Monthly",
 	"achiev-config-reset-m-desc" : "Updates at the 1st day 08:00 (UTC+8) everymonth",
+	"achiev-config-multiple" : "Multiple",
+	"achiev-config-multiple-desc" : "When user meets the achievement requirements again, this achievement will be awarded again",
 	"achiev-config-removable" : "Removable",
 	"achiev-config-removable-desc" : "Will be removed if the user does not meet the requirements",
 	"achiev-config-awardable" : "Awardable",
@@ -86,6 +96,9 @@
 	"achiev-achievers-count-desc" : "Number of users that had this achievement",
 	"achiev-achievers-count-sep" : " / ",
 	"achiev-achievers-count-mystery" : "??",
+	"achiev-award-score" : "Score: $1",
+	"achiev-award-date" : "Accomplish Date: $1",
+	"achiev-award-none" : "Unacommpolished",
 	
 	"echo-category-title-achiev" : "Achievements",
 	"echo-pref-tooltip-achiev" : "Notify me when I received or losted an achievement.",
