--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -16,6 +16,8 @@
 	"user-achiev-info-title" : "头衔及成就",
 	"user-current-achiev-title" : "当前头衔",
 	"user-count-achiev-title" : "保有成就数",
+	"user-achiev-score" : "成就分数",
+	"user-achiev-level" : "等级",
 	
 	"manageachievements-mode-list" : "查看所有成就",
 	"manageachievements-mode-prog" : "查看成就进度",
@@ -25,12 +27,18 @@
 	"manageachievements-mode-user" : "查看用户成就",
 	"manageachievements-mode-msg" : "成就名称信息",
 	"manageachievements-mode-ranking" : "保有成就数排名",
+	"manageachievements-mode-scoring" : "查看成就计分",
 	"manageachievements-mode-token" : "创建成就兑换码",
 	"manageachievements-mode-tokens" : "查看成就兑换码",
 	"manageachievements-mode-random" : "查看随机成就",
 	"manage-achiev-name" : "成就编号：",
 	"manage-achiev-user" : "用户名称：",
 	"manage-achiev-user-count" : "（$1人）",
+	"manage-achiev-ranking-user" : "用户名称",
+	"manage-achiev-ranking-achiev" : "保有成就数",
+	"manage-achiev-ranking-score" : "总计分数",
+	"manage-achiev-ranking-level" : "等级",
+	"manage-achiev-disable-scoring" : "未启用成就计分功能",
 	"manage-achiev-token-fail" : "无法创建成就兑换码，请检查颁发者用户状态及成就设定",
 	"manage-achiev-token-notawardable" : "无法创建成就兑换码，成就设置中“awardable”需设为“true”",
 	"manage-achiev-token-invalid" : "无效成就",
@@ -70,6 +78,8 @@
 	"achiev-config-reset-w-desc" : "会在 每周一 07:00 更新",
 	"achiev-config-reset-m" : "每月更新",
 	"achiev-config-reset-m-desc" : "会在 每月一号 08:00 更新",
+	"achiev-config-multiple" : "可多次获得",
+	"achiev-config-multiple-desc" : "用户再次满足成就要求时会再次颁发成就",
 	"achiev-config-removable" : "可移除",
 	"achiev-config-removable-desc" : "用户不满足成就要求时此成就就会被移除",
 	"achiev-config-awardable" : "可颁发",
@@ -86,6 +96,9 @@
 	"achiev-achievers-count-desc" : "已达成此成就的人数",
 	"achiev-achievers-count-sep" : " / ",
 	"achiev-achievers-count-mystery" : "??",
+	"achiev-award-score" : "分数：$1",
+	"achiev-award-date" : "达成日期：$1",
+	"achiev-award-none" : "未达成",
 	
 	"echo-category-title-achiev" : "成就",
 	"echo-pref-tooltip-achiev" : "获得或失去成就时通知我。",
