--- a/i18n/zh-hant.json
+++ b/i18n/zh-hant.json
@@ -16,6 +16,8 @@
 	"user-achiev-info-title" : "頭銜及成就",
 	"user-current-achiev-title" : "當前頭銜",
 	"user-count-achiev-title" : "保有成就數",
+	"user-achiev-score" : "成就分數",
+	"user-achiev-level" : "等級",
 
 	"manageachievements-mode-list" : "查看所有成就",
 	"manageachievements-mode-prog" : "查看成就進度",
@@ -25,12 +27,18 @@
 	"manageachievements-mode-user" : "查看用戶成就",
 	"manageachievements-mode-msg" : "成就名稱信息",
 	"manageachievements-mode-ranking" : "保有成就數排名",
+	"manageachievements-mode-scoring" : "查看成就計分",
 	"manageachievements-mode-token" : "創建成就兌換碼",
 	"manageachievements-mode-tokens" : "查看成就兌換碼",
 	"manageachievements-mode-random" : "查看隨機成就",
 	"manage-achiev-name" : "成就編號：",
 	"manage-achiev-user" : "用戶名稱：",
 	"manage-achiev-user-count" : "（$1人）",
+	"manage-achiev-ranking-user" : "用戶名稱",
+	"manage-achiev-ranking-achiev" : "保有成就數",
+	"manage-achiev-ranking-score" : "總計分數",
+	"manage-achiev-ranking-level" : "等級",
+	"manage-achiev-disable-scoring" : "未啟用成就計分功能",
 	"manage-achiev-token-fail" : "無法創建成就兌換碼，請檢查頒發者用戶狀態及成就設定",
 	"manage-achiev-token-notawardable" : "無法創建成就兌換碼，成就設置中“awardable”需設為“true”",
 	"manage-achiev-token-invalid" : "無效成就",
@@ -70,8 +78,10 @@
 	"achiev-config-reset-w-desc" : "會在 每週一 07:00 更新",
 	"achiev-config-reset-m" : "每月更新",
 	"achiev-config-reset-m-desc" : "會在 每月一號 08:00 更新",
+	"achiev-config-multiple" : "可多次獲得",
+	"achiev-config-multiple-desc" : "用户再次满足成就要求时会再次颁发成就",
 	"achiev-config-removable" : "可移除",
-	"achiev-config-removable-desc" : "用戶不滿足成就要求時此成就就會被移除",
+	"achiev-config-removable-desc" : "用戶再次滿足成就要求時會再次頒發成就",
 	"achiev-config-awardable" : "可頒發",
 	"achiev-config-awardable-desc" : "可由管理員頒發",
 	"achiev-config-hidden" : "隱藏成就",
@@ -86,6 +96,9 @@
 	"achiev-achievers-count-desc" : "已達成此成就的人數",
 	"achiev-achievers-count-sep" : " / ",
 	"achiev-achievers-count-mystery" : "??",
+	"achiev-award-score" : "分數：$1",
+	"achiev-award-date" : "達成日期：$1",
+	"achiev-award-none" : "未達成",
 
 	"echo-category-title-achiev" : "成就",
 	"echo-pref-tooltip-achiev" : "獲得或失去成就時通知我。",
