--- a/i18n/en.json
+++ b/i18n/en.json
@@ -45,6 +45,7 @@
 	"manage-achiev-token-invalid" : "Invalid achievement.",
 	"manage-achiev-token-user" : "Target User (optional): ",
 	"manage-achiev-token-count" : "Counter Increments (optional): ",
+	"manage-achiev-token-limit" : "Redeem Limit (optional): ",
 	"manage-achiev-token-time" : "Effective Time (in seconds, optional): ",
 	"manage-achiev-tokens-hash" : "Hash",
 	"manage-achiev-tokens-achievid" : "Achievement ID",
@@ -58,6 +59,8 @@
 	"achiev-loginrequired" : "You must be logged in to receive achievements.",
 	"redeem-achiev-token" : "Redeem Token: ",
 	"redeem-achiev-token-help" : "Redeem Token is a string of 10 characters in a format likes \"XXXXX-XXXXX\".",
+	"redeem-achiev-user" : "User Name (optional): ",
+	"redeem-achiev-user-help" : "Admins can redeem Tokens for other users.",
 	"achiev-error-invalid-stage" : "Error: Invalid Achievement stage.",
 	"achiev-error-empty-token" : "Error: Token is empty.",
 	"achiev-error-invalid-token" : "Error: Token is invalid.",
@@ -85,7 +88,7 @@
 	"achiev-config-removable" : "Removable",
 	"achiev-config-removable-desc" : "Will be removed if the user does not meet the requirements",
 	"achiev-config-awardable" : "Awardable",
-	"achiev-config-awardable-desc" : "Can be awarded by admins",
+	"achiev-config-awardable-desc" : "Can be awarded by Achievement admins",
 	"achiev-config-hidden" : "Hidden Achievements",
 	"achiev-config-hidden-desc" : "Will not appear on the default List of Achievements",
 	"achiev-config-active" : "Active Achievements",
