--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -45,6 +45,7 @@
 	"manage-achiev-token-invalid" : "无效成就",
 	"manage-achiev-token-user" : "指定用户（可选）：",
 	"manage-achiev-token-count" : "计数增加（可选）：",
+	"manage-achiev-token-limit" : "次数限制（可选）：",
 	"manage-achiev-token-time" : "有效时间（秒，可选）：",
 	"manage-achiev-tokens-hash" : "哈希值",
 	"manage-achiev-tokens-achievid" : "成就编号",
@@ -58,6 +59,8 @@
 	"achiev-loginrequired" : "您必须登录才能获取成就。",
 	"redeem-achiev-token" : "兑换码：",
 	"redeem-achiev-token-help" : "兑换码是“XXXXX-XXXXX”格式由10个字元组成的字串。",
+	"redeem-achiev-user" : "用户名称（可选）：",
+	"redeem-achiev-user-help" : "成就管理员可以为其他用户领取兑换码。",
 	"achiev-error-invalid-stage" : "错误：无效成就阶段",
 	"achiev-error-empty-token" : "错误：兑换码为空",
 	"achiev-error-invalid-token" : "错误：无效兑换码",
@@ -85,7 +88,7 @@
 	"achiev-config-removable" : "可移除",
 	"achiev-config-removable-desc" : "用户不满足成就要求时此成就就会被移除",
 	"achiev-config-awardable" : "可颁发",
-	"achiev-config-awardable-desc" : "可由管理员颁发",
+	"achiev-config-awardable-desc" : "可由成就管理员颁发",
 	"achiev-config-hidden" : "隐藏成就",
 	"achiev-config-hidden-desc" : "不会显示在默认成就列表上",
 	"achiev-config-active" : "活跃成就",
