--- a/i18n/zh-hant.json
+++ b/i18n/zh-hant.json
@@ -45,6 +45,7 @@
 	"manage-achiev-token-invalid" : "無效成就",
 	"manage-achiev-token-user" : "指定用戶（可選）：",
 	"manage-achiev-token-count" : "計數增加（可選）：",
+	"manage-achiev-token-limit" : "次數限制（可選）：",
 	"manage-achiev-token-time" : "有效時間（秒，可選）：",
 	"manage-achiev-tokens-hash" : "哈希值",
 	"manage-achiev-tokens-achievid" : "成就編號",
@@ -58,6 +59,8 @@
 	"achiev-loginrequired" : "您必須登錄才能獲取成就。",
 	"redeem-achiev-token" : "兌換碼：",
 	"redeem-achiev-token-help" : "兌換碼是“XXXXX-XXXXX”格式由10個字符組成的字串。",
+	"redeem-achiev-user" : "用戶名稱（可選）：",
+	"redeem-achiev-user-help" : "成就管理員可以為其他用戶領取兌換碼。",
 	"achiev-error-invalid-stage" : "錯誤：無效成就階段",
 	"achiev-error-empty-token" : "錯誤：兌換碼為空",
 	"achiev-error-invalid-token" : "錯誤：無效兌換碼",
@@ -85,7 +88,7 @@
 	"achiev-config-removable" : "可移除",
 	"achiev-config-removable-desc" : "用戶再次滿足成就要求時會再次頒發成就",
 	"achiev-config-awardable" : "可頒發",
-	"achiev-config-awardable-desc" : "可由管理員頒發",
+	"achiev-config-awardable-desc" : "可由成就管理員頒發",
 	"achiev-config-hidden" : "隱藏成就",
 	"achiev-config-hidden-desc" : "不會顯示在默認成就列表上",
 	"achiev-config-active" : "活躍成就",
