--- a/i18n/en.json
+++ b/i18n/en.json
@@ -58,9 +58,10 @@
 	"redeem-achiev-token-section" : "Please Enter A Redeem Token",
 	"achiev-loginrequired" : "You must be logged in to receive achievements.",
 	"redeem-achiev-token" : "Redeem Token: ",
-	"redeem-achiev-token-help" : "Redeem Token is a string of 10 characters in a format likes \"XXXXX-XXXXX\".",
+	"redeem-achiev-token-help" : "Redeem Token is a string of $2 characters in a format likes \"$1\".",
 	"redeem-achiev-user" : "User Name (optional): ",
 	"redeem-achiev-user-help" : "Admins can redeem Tokens for other users.",
+	"redeem-achiev-userlist" : "List of User Names (optional): ",
 	"achiev-error-invalid-stage" : "Error: Invalid Achievement stage.",
 	"achiev-error-empty-token" : "Error: Token is empty.",
 	"achiev-error-invalid-token" : "Error: Token is invalid.",
