--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -58,9 +58,10 @@
 	"redeem-achiev-token-section" : "请输入兑换码",
 	"achiev-loginrequired" : "您必须登录才能获取成就。",
 	"redeem-achiev-token" : "兑换码：",
-	"redeem-achiev-token-help" : "兑换码是“XXXXX-XXXXX”格式由10个字元组成的字串。",
+	"redeem-achiev-token-help" : "兑换码是“$1”格式由$2个字元组成的字串。",
 	"redeem-achiev-user" : "用户名称（可选）：",
 	"redeem-achiev-user-help" : "成就管理员可以为其他用户领取兑换码。",
+	"redeem-achiev-userlist" : "用户名称列表（可选）：",
 	"achiev-error-invalid-stage" : "错误：无效成就阶段",
 	"achiev-error-empty-token" : "错误：兑换码为空",
 	"achiev-error-invalid-token" : "错误：无效兑换码",
