--- a/i18n/zh-hant.json
+++ b/i18n/zh-hant.json
@@ -58,9 +58,10 @@
 	"redeem-achiev-token-section" : "請輸入兌換碼",
 	"achiev-loginrequired" : "您必須登錄才能獲取成就。",
 	"redeem-achiev-token" : "兌換碼：",
-	"redeem-achiev-token-help" : "兌換碼是“XXXXX-XXXXX”格式由10個字符組成的字串。",
+	"redeem-achiev-token-help" : "兌換碼是“$1”格式由$2個字符組成的字串。",
 	"redeem-achiev-user" : "用戶名稱（可選）：",
 	"redeem-achiev-user-help" : "成就管理員可以為其他用戶領取兌換碼。",
+	"redeem-achiev-userlist" : "用戶名稱列表（可選）：",
 	"achiev-error-invalid-stage" : "錯誤：無效成就階段",
 	"achiev-error-empty-token" : "錯誤：兌換碼為空",
 	"achiev-error-invalid-token" : "錯誤：無效兌換碼",
