--- a/i18n/en.json
+++ b/i18n/en.json
@@ -47,6 +47,7 @@
 	"manage-achiev-token-count" : "Counter Increments (optional): ",
 	"manage-achiev-token-limit" : "Redeem Limit (optional): ",
 	"manage-achiev-token-time" : "Effective Time (in seconds, optional): ",
+	"manage-achiev-token-batch" : "Batch (optional): ",
 	"manage-achiev-tokens-hash" : "Hash",
 	"manage-achiev-tokens-achievid" : "Achievement ID",
 	"manage-achiev-tokens-user" : "Issued by",
@@ -64,12 +65,13 @@
 	"redeem-achiev-userlist" : "List of User Names (optional): ",
 	"achiev-error-invalid-stage" : "Error: Invalid Achievement stage.",
 	"achiev-error-empty-token" : "Error: Token is empty.",
-	"achiev-error-invalid-token" : "Error: Token is invalid.",
+	"achiev-error-invalid-token" : "Error: Token is invalid, please check if you had mistyped, or this Token has expired.",
 	"achiev-error-invalid-source" : "Error: Token was issued by an invalid user.",
 	"achiev-error-blocked-source" : "Error: Token was issued by a blocked user.",
 	"achiev-error-blocked-user" : "Error: User has been blocked from this Achievement.",
 	"achiev-error-wrong-user" : "Error: You are not the targeted user.",
 	"achiev-error-achiev-notexists" : "Error: Achievement not exists.",
+	"achiev-error-achiev-notactive" : "Error: Achievement not active.",
 	"achiev-error-achiev-notawardable" : "Error: This Achievement is not awardable.",
 	"achiev-error-achiev-conflict" : "Error: Failed to award Achievement (conflicting Achievements).",
 	"achiev-error-achiev-already" : "Error: Failed to award Achievement (already has this Achievements).",
