--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -47,6 +47,7 @@
 	"manage-achiev-token-count" : "计数增加（可选）：",
 	"manage-achiev-token-limit" : "次数限制（可选）：",
 	"manage-achiev-token-time" : "有效时间（秒，可选）：",
+	"manage-achiev-token-batch" : "批量（可选）：",
 	"manage-achiev-tokens-hash" : "哈希值",
 	"manage-achiev-tokens-achievid" : "成就编号",
 	"manage-achiev-tokens-user" : "颁发用户",
@@ -64,12 +65,13 @@
 	"redeem-achiev-userlist" : "用户名称列表（可选）：",
 	"achiev-error-invalid-stage" : "错误：无效成就阶段",
 	"achiev-error-empty-token" : "错误：兑换码为空",
-	"achiev-error-invalid-token" : "错误：无效兑换码",
+	"achiev-error-invalid-token" : "错误：无效兑换码，请检查是否输入错误，或兑换码已经过期",
 	"achiev-error-invalid-source" : "错误：无效颁发者",
 	"achiev-error-blocked-source" : "错误：颁发者已被封禁",
 	"achiev-error-blocked-user" : "错误：用户已被禁止获取此成就",
-	"achiev-error-wrong-user" : "错误：用户不符",
+	"achiev-error-wrong-user" : "错误：兑换码指定用户不符",
 	"achiev-error-achiev-notexists" : "错误：成就不存在",
+	"achiev-error-achiev-notactive" : "错误：不是活跃成就",
 	"achiev-error-achiev-notawardable" : "错误：此成就不可由用户颁发",
 	"achiev-error-achiev-conflict" : "错误：无法颁发成就（与已有成就冲突）",
 	"achiev-error-achiev-already" : "错误：无法颁发成就（已有该成就）",
