--- a/i18n/zh-hant.json
+++ b/i18n/zh-hant.json
@@ -47,6 +47,7 @@
 	"manage-achiev-token-count" : "計數增加（可選）：",
 	"manage-achiev-token-limit" : "次數限制（可選）：",
 	"manage-achiev-token-time" : "有效時間（秒，可選）：",
+	"manage-achiev-token-batch" : "批量（可選）：",
 	"manage-achiev-tokens-hash" : "哈希值",
 	"manage-achiev-tokens-achievid" : "成就編號",
 	"manage-achiev-tokens-user" : "頒發用戶",
@@ -64,12 +65,13 @@
 	"redeem-achiev-userlist" : "用戶名稱列表（可選）：",
 	"achiev-error-invalid-stage" : "錯誤：無效成就階段",
 	"achiev-error-empty-token" : "錯誤：兌換碼為空",
-	"achiev-error-invalid-token" : "錯誤：無效兌換碼",
+	"achiev-error-invalid-token" : "錯誤：無效兌換碼，請檢查是否輸入錯誤，或兌換碼已經過期",
 	"achiev-error-invalid-source" : "錯誤：無效頒發者",
 	"achiev-error-blocked-source" : "錯誤：頒發者已被封禁",
 	"achiev-error-blocked-user" : "錯誤：用戶已被禁止獲取此成就",
 	"achiev-error-wrong-user" : "錯誤：用戶不符",
 	"achiev-error-achiev-notexists" : "錯誤：成就不存在",
+	"achiev-error-achiev-notactive" : "錯誤：不是活跃成就",
 	"achiev-error-achiev-notawardable" : "錯誤：此成就不可由用戶頒發",
 	"achiev-error-achiev-conflict" : "錯誤：無法頒發成就（與已有成就衝突）",
 	"achiev-error-achiev-already" : "錯誤：無法頒發成就（已有該成就）",
